[metadata]
name = sspa_cwieder
version = 1.0
author = Cecilia Wieder
author_email = cw2019@ic.ac.uk
description = Single sample pathway analysis tools for omics data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwieder/sspa
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: GNU 3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src